--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <div id="buttons-view"></div>
+    <button id ="corgi" class="topicBtn" data-topic="corgi">Corgi</button>
+    <button id ="bunny" class="topicBtn" data-topic="bunny">Bunny</button>
+    <button id ="kitten" class="topicBtn" data-topic="kitten">Kitten</button>
     <!-- Where the user will type in their gif topic/hit submit -->
     <form id="gifs-form"> 
         <label for="gif-input">Add a GIF</label>
